Implemented <meta charset> prescanning

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/web-encodings"]
 	path = modules/web-encodings
 	url = git://github.com/manakai/perl-web-encodings
+[submodule "t_deps/modules/test-x1"]
+	path = t_deps/modules/test-x1
+	url = git://github.com/wakaba/perl-test-x1
