--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "t_deps/modules/test-x1"]
 	path = t_deps/modules/test-x1
 	url = git://github.com/wakaba/perl-test-x1
+[submodule "modules/web-url"]
+	path = modules/web-url
+	url = git://github.com/manakai/perl-web-url
+[submodule "t_deps/modules/web-dom"]
+	path = t_deps/modules/web-dom
+	url = git://github.com/manakai/perl-web-dom
+[submodule "modules/charclass"]
+	path = modules/charclass
+	url = git://github.com/wakaba/perl-charclass.git
