--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 perl:
-  - "5.16"
-  - "5.10"
+  - "5.18"
+  - "5.8"
 before_install: git submodule update --init
 install: "make test-deps"
 script: "make test || ./perl t/parsing.t"
@@ -9,5 +9,5 @@ notifications:
     - wakaba@suikawiki.org
   irc:
     channels:
-      - "suika.fam.cx#mechanize"
+      - "irc.suikawiki.org#mechanize"
     use_notice: true
