--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ perl:
   - "5.8"
 before_install: git submodule update --init
 install: "make test-deps"
-script: "make test || ./perl t/parsing.t"
+script: "make test"
 notifications:
   email:
     - wakaba@suikawiki.org
