--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,52 @@
 [submodule "t_deps/tests"]
 	path = t_deps/tests
 	url = git://github.com/wakaba/tests-web.git
+        track = master
 [submodule "t_deps/modules/testdataparser"]
 	path = t_deps/modules/testdataparser
 	url = git://github.com/wakaba/testdataparser.git
+        track = master
 [submodule "modules/web-encodings"]
 	path = modules/web-encodings
 	url = git://github.com/manakai/perl-web-encodings
+        track = master
 [submodule "t_deps/modules/test-x1"]
 	path = t_deps/modules/test-x1
 	url = git://github.com/wakaba/perl-test-x1
+        track = master
 [submodule "modules/web-url"]
 	path = modules/web-url
 	url = git://github.com/manakai/perl-web-url
+        track = master
 [submodule "t_deps/modules/web-dom"]
 	path = t_deps/modules/web-dom
 	url = git://github.com/manakai/perl-web-dom
+        track = master
 [submodule "modules/charclass"]
 	path = modules/charclass
 	url = git://github.com/wakaba/perl-charclass.git
+        track = master
 [submodule "t_deps/modules/web-langtag"]
 	path = t_deps/modules/web-langtag
 	url = git://github.com/manakai/perl-web-langtag
+        track = master
 [submodule "t_deps/modules/web-resource"]
 	path = t_deps/modules/web-resource
 	url = git://github.com/manakai/perl-web-resource
+        track = master
 [submodule "t_deps/modules/web-css"]
 	path = t_deps/modules/web-css
 	url = git://github.com/manakai/perl-web-css
+        track = master
 [submodule "t_deps/modules/web-datetime"]
 	path = t_deps/modules/web-datetime
 	url = git://github.com/manakai/perl-web-datetime
+        track = master
 [submodule "t_deps/modules/regexp"]
 	path = t_deps/modules/regexp
 	url = git://github.com/wakaba/perl-regexp-utils
+        track = master
 [submodule "t_deps/modules/web-js"]
 	path = t_deps/modules/web-js
 	url = git://github.com/manakai/perl-web-js
+        track = master
