--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: perl
 perl:
   - "5.20"
   - "5.14"
-  - "5.8"
+matrix:
+  allow_failures:
+    - "5.8"
 before_install: git submodule update --init
 install: "make test-deps"
 script: "make test"
@@ -11,7 +13,7 @@ notifications:
     - wakaba@suikawiki.org
   irc:
     channels:
-      - "irc.suikawiki.org#mechanize"
+      - "ircs://irc.suikawiki.org:6697#mechanize"
     use_notice: true
 env:
   global:
