--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 	path = t_deps/modules/web-js
 	url = git://github.com/manakai/perl-web-js
         track = master
+[submodule "t_deps/modules/json-ps"]
+	path = t_deps/modules/json-ps
+	url = git://github.com/wakaba/perl-json-ps
