--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ git:
   submodules: false
 language: perl
 perl:
-  - "5.22"
+  - "5.24"
   - "5.14"
   - "5.10"
 before_install: git submodule update --init
@@ -17,9 +17,6 @@ notifications:
     use_notice: true
 env:
   global:
-    ## Merger
-    - secure: "hl7I44r0tPD4iTzCqJCKwDE0dmVumNYDpG7aFFuyd5yTBibgQPG1y7xm9y1aBm5Bs+ImdgmvkFzPcWBJJTopIINJ5iS0yx+KNnZh9JQ2PCl21WFKDef+GSMWPDmalQuIck4V4nIPtL2u7nHVJFBG1OuHy8X52vbCg1Qzo6NXgY8="
-    ## HTML parser benchmark
-    - secure: "VnPHj51h9PDVimcnyWihNlz751x7AxlzBLlxR+od8WI3inx/kFtb4RqBsAM/vqqJBB/K3flqR1DQFokSl4nuBdBR6m2Ux7zphHATRByoc6cGrhxGeVhDXCmrxWhgU3rvP5ER2vF9rwLaN3l1eGA6LNGMP4o2rMNlzITinGblFds="
+    secure: "an1toTP9+C/JUm2FY73rfKINByOucJoBAavevJqXzNrSczhECliRZovyxwyH8EfUlQs8CyUv7CHM1yPX7hDJg/DGAj05vY/K9/TDsBsY/CIcIccwHMYESYCI0xtifBCFCPgLjPz0eMuk/pkvolsF9Q/pL2UPTr/AS7nvGoN8Y0I="
 after_success:
-  - curl https://gist.githubusercontent.com/wakaba/9970857/raw/travis-merger.pl | perl
+  - curl -s -S -L https://gist.githubusercontent.com/wakaba/9970857/raw/travis-merger.pl | perl
