--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,43 @@
-git:
-  submodules: false
-language: perl
-perl:
-  - "5.24"
-  - "5.14"
-  - "5.10"
-before_install: git submodule update --init
-install: "make test-deps"
-script: "make test"
-notifications:
-  email:
-    - wakaba@suikawiki.org
-  irc:
-    channels:
-      - "ircs://irc.suikawiki.org:6697#mechanize"
-    use_notice: true
-env:
-  global:
-    secure: "an1toTP9+C/JUm2FY73rfKINByOucJoBAavevJqXzNrSczhECliRZovyxwyH8EfUlQs8CyUv7CHM1yPX7hDJg/DGAj05vY/K9/TDsBsY/CIcIccwHMYESYCI0xtifBCFCPgLjPz0eMuk/pkvolsF9Q/pL2UPTr/AS7nvGoN8Y0I="
-after_success:
-  - curl -s -S -L https://gist.githubusercontent.com/wakaba/9970857/raw/travis-merger.pl | perl
+{
+   "before_install" : "true",
+   "env" : {
+      "global" : {
+         "secure" : "aSTBcEisBId1ZG0uuHgm8H/HGswO5iHeHtF/8P3tsFqv57ZrBBUkzurYBRgnGUCrkf\u002BoMcLqhvR\u002BCeK/jtQkK/yaVDtG9bboJmQyX/KWsMlQ9n5IDOj94hFfCAeenkUwZ\u002Bs78rYJCnMYR98u6aru5EXYQFYS8Ilvch8V3ryYac4="
+      }
+   },
+   "git" : {
+      "submodules" : false
+   },
+   "install" : "make test-deps",
+   "jobs" : {
+      "include" : [
+         {
+            "stage" : "test"
+         },
+         {
+            "before_install" : "true",
+            "install" : "true",
+            "script" : "curl -f https://gist.githubusercontent.com/wakaba/ab553f86cd017e0cb28c6dbb5364b009/raw/travis-merge-job.pl | perl",
+            "stage" : "merge"
+         }
+      ]
+   },
+   "language" : "perl",
+   "notifications" : {
+      "email" : [
+         "wakaba@suikawiki.org"
+      ],
+      "irc" : {
+         "channels" : [
+            "ircs://irc.suikawiki.org:6697#mechanize"
+         ],
+         "use_notice" : true
+      }
+   },
+   "perl" : [
+      "5.26",
+      "5.14",
+      "5.10"
+   ],
+   "script" : "make test"
+}
